feat: add event sending to Notificatiobn API
